# Applied-Robotics

./: README.md
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/launch/: a2.launch  pose_planner.launch
cubic_polynomial_planner/src/: .pose_planner.cpp.swp  pose_planner.cpp
dynamic_controller/: CMakeList.txt  CMakeLists.txt  package.xml
dynamic_controller/launch/: .pose_controller.launch.swp  joint_controller.launch  pose_controller.launch
dynamic_controller/src/: .joint_planner.cpp.swp  .pose_controller.cpp.swp  joint_controller.cpp  joint_planner.cpp  pose_controller.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a6.yaml  a6_part_4.yaml  final.yaml
highlevel_controller/launch/: a5.launch  a6.launch  final.launch
highlevel_controller/src/: action_client.cpp  pose_action_client.cpp
highlevel_controller/worlds/: final.world
highlevel_msgs/: CMakeLists.txt  package.xml
highlevel_msgs/action/: PoseCommand.action
highlevel_msgs/srv/: SetKD.srv
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/launch/: a1.launch
keyboard_controller/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
keyboard_controller/src/: keyboard_subscriber.cpp
kinematic_controller/: CMakeLists.txt  package.xml
kinematic_controller/launch/: controller.launch
kinematic_controller/src/: .inverse_kinematic_controller.cpp.swp  inverse_kinematic_controller.cpp
potential_field_planner/: CMakeLists.txt  package.xml
potential_field_planner/launch/: joint_planner.launch
potential_field_planner/src/: .joint_planner.cpp.swp  joint_planner.cpp
