<?xml version="1.0"?>
<package format="2">
  <name>cubic_polynomial_planner</name>
  <version>0.6.4</version>
  <description>Cubic Polynomial Planner</description>

  <author email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</author>
  <maintainer email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>highlevel_msgs</depend>

	<build_depend>eigen3</build_depend>

	<exec_depend>eigen3</exec_depend>
  <exec_depend>message_runtime</exec_depend>
	
</package>
