<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.6.4</version>
  <description>High Levels Controller</description>

  <author email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</author>

  <maintainer email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kinematic_controller</depend>
  <depend>control_msgs</depend>
	
</package>
