<?xml version="1.0"?>
<package format="2">
	<name>keyboard_controller</name>
	<version>0.1.0</version>
	<description>Assignment 1</description>
	<maintainer email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>

</package>
