<?xml version="1.0"?>
<package format="2">
  <name>kinematic_controller</name>
  <version>0.6.4</version>
  <description>Kinematic Controller</description>

  <author email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</author>
  <maintainer email="shushi.huang@mail.mcgill.ca">Shushi Michael Huang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
	<depend>highlevel_msgs</depend>
	<depend>potential_field_planner</depend>
	<depend>cubic_polynomial_planner</depend>

	<build_depend>eigen3</build_depend>

	<exec_depend>eigen3</exec_depend>
  <exec_depend>message_runtime</exec_depend>
	
</package>
